--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -34,7 +34,7 @@ http {
     gzip_vary on;
     gzip_min_length 1000;
     gzip_proxied any;
-    gzip_comp_level 6;
+    gzip_comp_level 5;
     gzip_types
         text/plain
         text/css
@@ -54,37 +54,24 @@ http {
     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
     # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
-
-    # Upstream backend
-    upstream backend {
-        server backend:8000;
-        keepalive 32;
-    }
+    limit_req_zone $binary_remote_addr zone=api:10m rate=50r/s;
 
     # Frontend server
     server {
-        listen 80;
-        server_name 127.0.0.1;
+        listen 3000;
+        server_name localhost backend;
         root /usr/share/nginx/html;
         index index.html;
 
         # Security
         server_tokens off;
 
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-
         # API proxy to backend
         location /api/ {
             limit_req zone=api burst=20 nodelay;
             
-            proxy_pass http://backend;
+            # Proxy to backend URL
+            proxy_pass http://backend/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -95,7 +82,7 @@ http {
             proxy_cache_bypass $http_upgrade;
             
             # Timeouts
-            proxy_connect_timeout 5s;
+            proxy_connect_timeout 10s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
             
