🚀🚀🚀 LokaSync v1.2.3 is ready to deploy: Bug fixes on frontend and backend + frontend add feature switch dark/light theme and handle data sensor in monitoring + backend add feature for local log.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,6 +23,7 @@ MQTT_BROKER_PASSWORD=
 MQTT_BROKER_CA_CERT_NAME=
 MQTT_BROKER_TLS_ENABLED=False # True or False with capitalized format
 MQTT_SUBSCRIBE_TOPIC_LOG=OTAUpdate
+MQTT_SUBSCRIBE_TOPIC_LOG_LOCAL=LocalOTAUpdate
 MQTT_PUBLISH_TOPIC_LOG=DisplayLog
 MQTT_DEFAULT_QOS=1
 MQTT_WAIT_FLASH_TIMEOUT_MINUTES=5
