--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     env_file:
       - ./backend/.env
     ports:
-      - "${BACKEND_PORT}:8000"
+      - "${BACKEND_PORT}:${BACKEND_PORT}"
     depends_on:
       mongodb:
         condition: service_healthy
@@ -53,43 +53,21 @@ services:
     env_file:
       - ./frontend/.env
     ports:
-      - "80:${FRONTEND_PORT}"
-      - "443:${FRONTEND_PORT}" # Forced HTTPS
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     depends_on:
       - backend
     networks:
       - lokasync-network
-
-  # Nginx Proxy Manager
-  proxy:
-    image: jc21/nginx-proxy-manager:latest
-    container_name: lokasync-nginx-proxy-manager
-    restart: unless-stopped
-    environment:
-      DB_SQLITE_FILE: /data/proxy_database.sqlite
-      DISABLE_IPV6: 'true'
-    ports:
-      - "8080:80"
-      - "8443:443"
-      - "81:81" # Admin interface
-    depends_on:
-      - mongodb
-      - backend
-      - frontend
-    volumes:
-      - proxy_data:/data
-      - proxy_ssl:/etc/letsencrypt
-    networks:
-      - lokasync-network
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   mongodb_data:
     driver: local
   mongodb_config:
-    driver: local
-  proxy_data:
-    driver: local
-  proxy_ssl:
     driver: local
 
 networks:
