--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -34,7 +34,7 @@ http {
     gzip_vary on;
     gzip_min_length 1000;
     gzip_proxied any;
-    gzip_comp_level 5;
+    gzip_comp_level 6;
     gzip_types
         text/plain
         text/css
@@ -51,45 +51,22 @@ http {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=50r/s;
-
-    # Frontend server
+    # Frontend server (internal port 3000)
     server {
         listen 3000;
-        server_name localhost backend;
+        server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
 
         # Security
         server_tokens off;
 
-        # API proxy to backend
-        location /api/ {
-            limit_req zone=api burst=20 nodelay;
-            
-            # Proxy to backend URL
-            proxy_pass http://backend/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            
-            # Timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-            
-            # Buffer settings
-            proxy_buffering on;
-            proxy_buffer_size 4k;
-            proxy_buffers 8 4k;
+        # Health check endpoint
+        location /health {
+            access_log off;
+            return 200 "Frontend OK\n";
+            add_header Content-Type text/plain;
         }
 
         # Handle React Router (SPA)
